-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.2.0-rc0
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2025-03-31
-
200
-
None
-
3
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The error code 743870 triggered by this check can cause queries to be killed.
The error should be treated as transient as the query can be safely retried. It presents when
- The collection exists when running a find/aggregate (or never existed)
- The collection is dropped and re-created
- The aggregation runs getMore and restores the acquisitions.
Many aggregation test retry on QueryPlanKilled but don't on 743870, causing false positive.
Converting the code to QueryPlanKilled would also make this error more expressive to the final user.
The problem is present only in master as before we were not using the shard role api in the query aggregation framework