SERVER-102978 convert error 74870 to QueryPlanKilled (#34186)

GitOrigin-RevId: c725731074ca95aa996da08a4c4c46e40a2ccd56